# ralph-beads

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  cleanup.md  install.sh  issue.md  prompt.md  quality-check.md  ralph.md  ralph.sh  release-plz.toml  validation-check.md
.beads/: issues.jsonl
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  dependency-audit.yml  release-plz.yml
.ralph/prompts/: .template-version  cleanup.md  code-review-check.md  issue.md  quality-check.md  ralph.md  validation-check.md
docs/: TODO.md
prompts/: cleanup.md  code-review-check.md  issue.md  quality-check.md  ralph.md  repair.md  validation-check.md
src/: build_info.rs  capture.rs  claude.rs  cli.rs  init.rs  issues.rs  main.rs  prompts.rs  run_state.rs  runner.rs  settings.rs  summary.rs  terminal.rs
