[package]
name = "ralph-beads"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde_json = "1.0"
which = "8.0"
