[package]
name = "ralph-beads"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
portable-pty = "0.9"
ratatui = "0.30"
serde_json = "1.0"
vt100 = "0.16"
which = "8.0"
